<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_tasks"
        android:icon="@drawable/ic_tasks"
        android:title="@string/nav_tasks" />
    <item
        android:id="@+id/nav_courses"
        android:icon="@drawable/ic_courses"
        android:title="@string/nav_courses" />
    <item
        android:id="@+id/nav_research"
        android:icon="@drawable/ic_research"
        android:title="@string/nav_research" />
    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/ic_news"
        android:title="@string/nav_news" />
</menu>
